# kachi

./: .coverage  .env.example  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  PLAN2.md  README.md  alembic.ini  coverage.xml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
examples/: external_metrics_demo.py
frontend/dashboard/: package-lock.json  package.json  vite.config.ts
frontend/dashboard/src/: App.vue
frontend/dashboard/src/components/: AnimatedNumber.vue  AnomalyDetection.vue  BillingPreview.vue  CostForecastingEngine.vue  CustomerSegmentation.vue  MetricsGrid.vue  Navbar.vue  PredictiveBilling.vue  RealTimeMetrics.vue  UsageCard.vue  UsageForecasting.vue  UsageSimulator.vue  UsageTrendChart.vue
frontend/dashboard/src/router/: index.ts
frontend/dashboard/src/stores/: customer.ts
frontend/dashboard/src/views/: AdvancedAnalyticsView.vue  AnalyticsView.vue  BillingView.vue  CustomerDetailView.vue  CustomersView.vue  HomeView.vue
scripts/: init-db.sql  run_tests.py
src/kachi/: __init__.py
src/kachi/apps/: __init__.py
src/kachi/apps/dashboard_api/: __init__.py  main.py  mock_server.py
src/kachi/apps/deriver/: __init__.py  main.py  processors.py  tasks.py
src/kachi/apps/ingest_api/: __init__.py  main.py  processors.py
src/kachi/apps/lago_adapter/: __init__.py  main.py  tasks.py
src/kachi/apps/metrics_collector/: api.py  main.py  tasks.py
src/kachi/apps/rater/: __init__.py  main.py  tasks.py
src/kachi/infra/migrations/: env.py
src/kachi/infra/migrations/versions/: 20250909_2333-43550edfed70_initial_schema.py  20250914_2206-b954aefc4a7d_add_missing_customer_columns.py  20250914_2256-beaa4b8feb15_fix_rated_usage_period_columns_to_.py
src/kachi/lib/: cogs_calculator.py  db.py  lago_client.py  metrics_config.py  metrics_connectors.py  metrics_transformer.py  models.py  otel_schemas.py  prometheus_connector.py  rating_policies.py  success_fees.py  usage_alerts.py
tests/: conftest.py  test_cogs_calculator.py  test_dashboard_api.py  test_deriver.py  test_ingest_api.py  test_integration.py  test_lago_integration.py  test_metrics_connectors.py  test_performance.py  test_property_based.py  test_rater.py  test_success_fees.py  test_usage_alerts.py
